feat: settle fiscal payables and cash flow
